@@ -3,6 +3,7 @@ visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info
 ===gradle_8.0=== 8/19 24pm
 -reworked GUI
 -added info page
+-bug fix: button boundary
 
 
 
